// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane P1 — the phone is unchanged (golden) plans list, iOS 390 1`] = `
{
  "lines": 626,
  "sha256": "86c6ac8a46750c65637b319eb8d9be5aaba17ec6ef6acbcad0b633124281000d",
}
`;

exports[`lane P1 — the phone is unchanged (golden) plans list, web 390 1`] = `
{
  "lines": 626,
  "sha256": "86c6ac8a46750c65637b319eb8d9be5aaba17ec6ef6acbcad0b633124281000d",
}
`;

exports[`lane P1 — the phone is unchanged (golden) plans project picker, iOS 390 1`] = `
{
  "lines": 339,
  "sha256": "dcde2e1e06a0364ed782bfc8978c2b06e3c2dd26eba8bc244b69082fa049cb00",
}
`;

exports[`lane P1 — the phone is unchanged (golden) plans project picker, web 390 1`] = `
{
  "lines": 339,
  "sha256": "dcde2e1e06a0364ed782bfc8978c2b06e3c2dd26eba8bc244b69082fa049cb00",
}
`;

exports[`lane P1 — the phone is unchanged (golden) plans with superseded shown, iOS 390 1`] = `
{
  "lines": 668,
  "sha256": "a3ef2c9e0545e8b35d5c80f73567f536efc844be195d15c3913ed4c0ac96901c",
}
`;

exports[`lane P1 — the phone is unchanged (golden) plans with the Ask sheet open, iOS 390 1`] = `
{
  "lines": 626,
  "sha256": "c41a17e825137773a35089a52bc73c12bfcc297d61176b2f0fb5640af9c6e724",
}
`;

exports[`lane P1 — the phone is unchanged (golden) plans with the Ask sheet open, web 390 1`] = `
{
  "lines": 626,
  "sha256": "c41a17e825137773a35089a52bc73c12bfcc297d61176b2f0fb5640af9c6e724",
}
`;

exports[`lane P1 — the phone is unchanged (golden) viewer A-101 Rev 1 (superseded banner), iOS 390 1`] = `
{
  "lines": 474,
  "sha256": "01f4cbd2d7327f1c19dd8bfc1707c8f0ac732c3d4da2abe02be0f82860e86f4a",
}
`;

exports[`lane P1 — the phone is unchanged (golden) viewer A-101 Rev 1 (superseded banner), web 390 1`] = `
{
  "lines": 474,
  "sha256": "01f4cbd2d7327f1c19dd8bfc1707c8f0ac732c3d4da2abe02be0f82860e86f4a",
}
`;

exports[`lane P1 — the phone is unchanged (golden) viewer A-101 Rev 2, iOS 390 1`] = `
{
  "lines": 463,
  "sha256": "b9aa46903a78d579aed326458259ff370239f2bc69fb03c63b3180c1aadacd08",
}
`;

exports[`lane P1 — the phone is unchanged (golden) viewer A-101 Rev 2, web 390 1`] = `
{
  "lines": 463,
  "sha256": "b9aa46903a78d579aed326458259ff370239f2bc69fb03c63b3180c1aadacd08",
}
`;

exports[`lane P1 — the phone is unchanged (golden) viewer with the pin sheet open, iOS 390 1`] = `
{
  "lines": 566,
  "sha256": "3209e815c2dd90a2447ca452dbdb2ee473f5f7633a7d89fad68e4f09b64e4a72",
}
`;
